--- a/courses.html
+++ b/courses.html
@@ -8,6 +8,8 @@
 <body>
     <h1> classcode are provided are various courses like 
         full stack web developer
+
     </h1>
+    <h2> classes are also proived various thing </h2>
 </body>
 </html>
