--- a/home.html
+++ b/home.html
@@ -11,9 +11,7 @@
         <header>
             <h1>Yellowgap Education Society</h1>
         </header>
-         <a href="https://www.yellowgap.com/" >Visit yellowgap.com! <button>
-            tab here
-         </button></a>
+         <a href="https://www.yellowgap.com/">Visit yellowgap.com! <button>tab here</button></a>
 
         
     
