--- a/courses.html
+++ b/courses.html
@@ -11,5 +11,6 @@
 
     </h1>
     <h2> classes are also proived various thing </h2>
+    <h3> important notes are also provided </h3>
 </body>
 </html>
